--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 <build>
         <plugins>
             <plugin>
@@ -62,5 +61,7 @@
             </plugin>
         </plugins>
     </build>
+
+    <packaging>pom</packaging>
 
 </project>
